# gtest_simple

./: CMakeLists.txt  Example  Example.cpp  README.md
Tests/: CMakeLists.txt  ExampleTests.cpp
